--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
     <h1>Hello from Kubernetes!</h1>
-    <p>Deployed via ArgoCD + GitHub Actions</p>
+    <p>Test- Deployed via ArgoCD + GitHub Actions!</p>
 </body>
 </html>
